 - ceiling scaling values

0.0.4:
 - properly close file selection dialog
 - implemented automatic screen sharing when in fullscreen mode

0.0.3:
 - implemented url sharing
 - implemented file sharing

0.0.2:
 - implement raise hand functionality
 - implement popup menus on teacher
 - support viewing student screens

0.0.1:
 - initial version
 - support screen sharing and screen locking
 - broadcast-based teacher discovery
 - multicast-based screen projection