@@ -1,3 +1,4 @@
+ - implemented class shutdown
  - ceiling scaling values
 
 0.0.4:
